--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,18 +25,31 @@ android {
 }
 
 dependencies {
+
+//noinspection GradleCompatible
+    compile "com.android.support:design:24.2.0"
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    //noinspection GradleCompatible
+    compile 'com.android.support:design:23.1.1'
+    //noinspection GradleCompatible
+    compile 'com.android.support:cardview-v7:23.1.1'
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.2'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+
+
+
+
 }
